[package]
name = "yagui"
version = "0.0.1"
authors = ["Shamil <shamil@shamil.ru>"]
edition = "2018"
license = "MIT"
description = "Yet Another GUI library"
keywords = ["gui"]
categories = ["gui"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
anyhow = "1.0"
conrod_core = "0.71"
glium = "0.28"
thiserror = "1.0"
yaml-rust = "0.4"
#winit = "0.23"
